helm/longhorn/extra/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: longhorn-system
  name: longhorn-basic-auth
spec:
  basicAuth:
    secret: longhorn-auth-secrets
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.kalexlab.xyz`)
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: longhorn-basic-auth
  tls:
    secretName: longhorn-ingress-certificate-secret
